# font_obfuscator

./: .coderabbit.yaml  .gitignore  Cargo.toml  README.md  SPEC.md  clippy.toml  requirements.txt  rustfmt.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
src/: config.rs  core.rs  main.rs  model.rs  utils.rs
