[package]
name = "font_obfuscator"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
tokio = { version = "1.50.0", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
font-types = "0.11.1"
read-fonts = "0.38.0"
write-fonts = "0.48.0"
base64 = "0.22.1"
uuid = { version = "1.22.0", features = ["v4"] }
rand = "0.10.0"
thiserror = "2.0.18"
tower-http = { version = "0.6.8", features = ["cors"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
ttf2woff2 = { version = "0.11.0", default-features = false }

[dev-dependencies]
tempfile = "3"

[lints.rust]
unsafe_code = "forbid"
unused_must_use = "deny"
missing_debug_implementations = "warn"

[lints.clippy]
# 正确性
correctness = { level = "deny", priority = -1 }

# 性能
perf = { level = "warn", priority = -1 }

# 可疑代码
suspicious = { level = "warn", priority = -1 }

# 生产级严格 lint
enum_glob_use = "warn"
cast_possible_truncation = "warn"
cast_sign_loss = "warn"
cast_possible_wrap = "warn"
needless_pass_by_value = "warn"
redundant_closure_for_method_calls = "warn"
cloned_instead_of_copied = "warn"
inefficient_to_string = "warn"
semicolon_if_nothing_returned = "warn"
uninlined_format_args = "warn"
trivially_copy_pass_by_ref = "warn"
implicit_clone = "warn"
manual_let_else = "warn"
unused_self = "warn"
return_self_not_must_use = "warn"
doc_markdown = "warn"
needless_raw_string_hashes = "warn"
